--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -407,6 +407,11 @@ if (NOT LLVM_ENABLE_RTTI)
 endif()
 
 ################################################################################
+# JOR: too many of those warnings
+################################################################################
+klee_component_add_cxx_flag("-Wno-misleading-indentation")
+
+################################################################################
 # Support for compressed logs
 ################################################################################
 find_package(ZLIB)
