--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -7,6 +7,7 @@
 #
 #===------------------------------------------------------------------------===#
 klee_add_component(kleeModule
+  BottomUp.cpp
   Checks.cpp
   InstructionInfoTable.cpp
   IntrinsicCleaner.cpp
