Move code from Executor to a non-pass Keeper class. Pass this class instead of targets to the Chopper passes. Remove skippedTargets.erase(*d) in ModRefAnalysis::run. Regression tests passing

--- a/lib/Analysis/CMakeLists.txt
+++ b/lib/Analysis/CMakeLists.txt
@@ -8,6 +8,7 @@
 #===------------------------------------------------------------------------===#
 
 klee_add_component(kleeAnalysis
+    Keeper.cpp
     ReachabilityAnalysis.cpp
     Inliner.cpp
     AAPass.cpp
